force-app/main/default/objects/Ethics_Post_Approval__c/Ethics_Post_Approval__c.object-meta.xml
<CustomObject>
    <label>Ethics Post Approval</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ethics Post Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>