force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Annual_Final_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Annual_Final_Report_Type__c</fullName>
    <label>Annual/Final Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Final Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>