force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_Date__c</fullName>
    <inlineHelpText>The date your post-approval request was approved. Populated by the Research Office.</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>