force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Chair_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Chair_Person_Name__c</fullName>
    <formula>I_RS_Assigned_Meeting_Date__r.I_RS_Chair_Person__r.I_RS_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chair Person Name</label>
    <type>Text</type>
</CustomField>