force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Conditions_of_approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conditions_of_approval__c</fullName>
    <inlineHelpText>The approved research must be conducted within these conditions. Populated by the Research Office</inlineHelpText>
    <label>Conditions of approval</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>