force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Description__c</fullName>
    <inlineHelpText>A brief detail of the post-approval request. Populated by the Research Office.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>