force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Ethics_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Application_Number__c</fullName>
    <formula>I_RS_Ethics_Request__r.I_RS_Ethics_Application_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethics Application Number</label>
    <type>Text</type>
</CustomField>