force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Ethics_Committee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Committee__c</fullName>
    <formula>TEXT(I_RS_Assigned_Meeting_Date__r.I_RS_Committee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A reminder of the type of  ethics request. Populated by the Research Office.</inlineHelpText>
    <label>Ethics Committee</label>
    <type>Text</type>
</CustomField>