force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Ethics_Request__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Request__c</fullName>
    <inlineHelpText>Click on this link to return to home page of the approved ethics request.</inlineHelpText>
    <label>Ethics Request</label>
    <referenceTo>Ethics_Request__c</referenceTo>
    <relationshipLabel>Ethics Post Approvals</relationshipLabel>
    <relationshipName>Related_Ethics_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>