force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Ethics_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Request_Type__c</fullName>
    <description>Stores the Record Type Name of the associated Ethics Request. This is used to filter Meeting Dates</description>
    <inlineHelpText>A reminder of the type of  ethics request. Populated by the Research Office.</inlineHelpText>
    <label>Ethics Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Ethics Application</fullName>
            </value>
            <value>
                <fullName>Human Ethics Application</fullName>
            </value>
            <value>
                <fullName>Research Governance Authorisation</fullName>
                <label>Externally Approved Application</label>
            </value>
            <value>
                <fullName>SOP/Phenotype Report</fullName>
            </value>
            <value>
                <fullName>Institutional Biosafety Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>