force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Meeting_Comments_Rich__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Comments_Rich__c</fullName>
    <label>Actions for researchers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>