force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Meeting_Date_Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Date_Calendar_Date__c</fullName>
    <formula>I_RS_Assigned_Meeting_Date__r.I_RS_Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date the ethics request will be reviewed by the Committee.  Populated by the Research Office.</inlineHelpText>
    <label>Meeting Date Calendar Date</label>
    <type>Date</type>
</CustomField>