force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Number_of_Review_Times__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Review_Times__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of times the Committee has reviewed the same ethics request. This is automatically calculated.</inlineHelpText>
    <label>Number of Review Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>