force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Principal_Investigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Principal_Investigator__c</fullName>
    <formula>I_RS_Ethics_Request__r.I_RS_Principal_Investigator_Contact__r.FirstName  &amp; &quot; &quot; &amp;  I_RS_Ethics_Request__r.I_RS_Principal_Investigator_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Investigator</label>
    <type>Text</type>
</CustomField>