force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Ratified__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ratified__c</fullName>
    <inlineHelpText>Research can start upon approval, but in some cases, approval needs to be ratified. Populated by the Research Office.</inlineHelpText>
    <label>Ratified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratified</valueSetName>
    </valueSet>
</CustomField>