force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_Type_Label__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Label</label>
    <type>Text</type>
</CustomField>