force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ethics Post Approvals</relationshipLabel>
    <relationshipName>Ethics_Post_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>