force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Researcher_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Researcher_Portal_URL__c</fullName>
    <description>Link to record in the Researcher Portal. Useful for email templates.</description>
    <formula>/*Base URL*/
$Setup.URL_Variable__c.I_RS_Researcher_Portal_Base_URL__c + &apos;/detail/&apos;
+
/*Record Id*/
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Researcher Portal URL</label>
    <type>Text</type>
</CustomField>