force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Review_Outcome__c</fullName>
    <inlineHelpText>Committee’s decision. Populated by the Research Office.</inlineHelpText>
    <label>Ethics Application Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Not Ready for Committee Review</fullName>
            </value>
            <value>
                <fullName>Subject to</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Outcome Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Noted</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>