force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reviewers__c</fullName>
    <inlineHelpText>This field is intentionally left blank.</inlineHelpText>
    <label>Reviewers</label>
    <type>TextArea</type>
</CustomField>