force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <inlineHelpText>This is the status corresponds with the ethics request status at the top of the page. If this status is ‘draft’ this means the researcher has an action to complete. Populated by the Research Office.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Review_Outcome__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Review by Research Office</fullName>
            </value>
            <value>
                <fullName>Assigned for Review</fullName>
            </value>
            <value>
                <fullName>Outcome Communicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>