force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Topic_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Topic_Subject_Line__c</fullName>
    <inlineHelpText>A summary of the request that can be added after a &apos;re:&apos; in communications</inlineHelpText>
    <label>Topic/Subject Line</label>
    <type>TextArea</type>
</CustomField>