force-app/main/default/objects/Ethics_Post_Approval__c/fields/I_RS_Trim_Link__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Trim_Link__c</fullName>
    <inlineHelpText>The URL to the Record Management System that holds any records that cannot be held in the system. Populated by the Research Office.</inlineHelpText>
    <label>Trim Link</label>
    <type>Url</type>
</CustomField>