force-app/main/default/objects/Ethics_Post_Approval__c/recordTypes/Adverse_Events_Safety_Reports.recordType-meta.xml
<RecordType>
    <fullName>Adverse_Events_Safety_Reports</fullName>
    <active>true</active>
    <label>Unexpected Adverse Events/Safety Reports</label>
</RecordType>