force-app/main/default/objects/Ethics_Post_Approval__c/recordTypes/Annual_Final_Reports.recordType-meta.xml
<RecordType>
    <fullName>Annual_Final_Reports</fullName>
    <active>true</active>
    <label>Annual Reports</label>
</RecordType>