force-app/main/default/objects/Ethics_Post_Approval__c/recordTypes/Final_Reports.recordType-meta.xml
<RecordType>
    <fullName>Final_Reports</fullName>
    <active>true</active>
    <label>Final Reports</label>
</RecordType>