force-app/main/default/objects/Ethics_Post_Approval__c/recordTypes/General_Correspondence.recordType-meta.xml
<RecordType>
    <fullName>General_Correspondence</fullName>
    <active>true</active>
    <label>General Correspondence</label>
</RecordType>