force-app/main/default/objects/Ethics_Post_Approval__c/recordTypes/Modification.recordType-meta.xml
<RecordType>
    <fullName>Modification</fullName>
    <active>true</active>
    <label>Modification</label>
</RecordType>