force-app/main/default/objects/Ethics_Post_Approval__c/validationRules/Assign_meeting_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_meeting_date</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(I_RS_Status__c) = &quot;Assigned for Review&quot; &amp;&amp; 
ISBLANK(I_RS_Assigned_Meeting_Date__c) &amp;&amp;
$User.I_RS_Is_Researcher_User__c &lt;&gt; &apos;1&apos;</errorConditionFormula>
    <errorDisplayField>I_RS_Assigned_Meeting_Date__c</errorDisplayField>
    <errorMessage>Please select a meeting date.</errorMessage>
</ValidationRule>