force-app/main/default/objects/Ethics_Post_Approval__c/validationRules/Edit_Rights_for_Researchers_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Rights_for_Researchers_Status</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
$User.I_RS_Is_Researcher_User__c = &apos;1&apos;,
NOT(ISNEW()),
ISCHANGED(I_RS_Status__c),
TEXT(I_RS_Status__c) &lt;&gt; &quot;Review By Research Office&quot;
),

AND(
$User.I_RS_Is_Researcher_User__c = &apos;1&apos;,
NOT(ISNEW()),
NOT(ISPICKVAL(PRIORVALUE(I_RS_Status__c),&quot;Draft&quot;)),
TEXT(I_RS_Status__c) = &quot;Review By Research Office&quot;
)
)</errorConditionFormula>
    <errorMessage>Please contact Research Office if this record needs to be changed</errorMessage>
</ValidationRule>