force-app/main/default/objects/Ethics_Post_Approval__c/validationRules/Please_provide_actions_for_researchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Please_provide_actions_for_researchers</fullName>
    <active>true</active>
    <description>If the Ethics Application Review outcome is changed, depending on its value, force the user to provide Actions for Researchers</description>
    <errorConditionFormula>(
TEXT(I_RS_Review_Outcome__c) = &apos;Not ready for committee review&apos; ||
TEXT(I_RS_Review_Outcome__c) = &apos;Subject to&apos; ||
TEXT(I_RS_Review_Outcome__c) = &apos;Deferred&apos; ||
TEXT(I_RS_Review_Outcome__c) = &apos;Rejected&apos; ||
TEXT(I_RS_Review_Outcome__c) = &apos;Withdrawn&apos; ||
TEXT(I_RS_Review_Outcome__c) = &apos;Suspended&apos; ||
TEXT(I_RS_Review_Outcome__c) = &apos;Terminated&apos;
) &amp;&amp;
LEN(I_RS_Meeting_Comments_Rich__c) = 0</errorConditionFormula>
    <errorDisplayField>I_RS_Meeting_Comments_Rich__c</errorDisplayField>
    <errorMessage>Before the email can be sent please add questions to the ‘Actions for Researchers’ field.</errorMessage>
</ValidationRule>