force-app/main/default/objects/Ethics_Post_Approval__c/validationRules/ResearchersEditRghtsForRecordName.validationRule-meta.xml
<ValidationRule>
    <fullName>ResearchersEditRghtsForRecordName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
NOT(ISBLANK(Name)),
ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You can&apos;t change the Record Name</errorMessage>
</ValidationRule>