force-app/main/default/objects/Ethics_Post_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Ethics_Request__c</columns>
    <columns>I_RS_Principal_Investigator__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Review_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>