force-app/main/default/objects/Ethics_Post_Approval__c/listViews/Review_by_Research_Office.listView-meta.xml
<ListView>
    <fullName>Review_by_Research_Office</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Ethics_Request__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>I_RS_Review_Outcome__c</columns>
    <columns>I_RS_Principal_Investigator__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Status__c</field>
        <operation>equals</operation>
        <value>Review by Research Office</value>
    </filters>
    <label>Review by Research Office</label>
</ListView>